Initial commit: Implements grade calculator app
Initializes the "Final Exam Grade Calculator" application with Next.js, Tailwind CSS, and Cloudflare Pages deployment.

This commit sets up the basic structure, including core dependencies,
Cloudflare Pages configuration, and essential files for calculating
final exam grades and providing related academic planning tools.

It also includes a LICENSE file, README, robots.txt, and sitemap.xml for
project management, SEO, and legal compliance.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "my-v0-project",
-  "version": "0.1.0",
+  "name": "final-exam-grade-calculator",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "wrangler pages publish .next --project-name=final-exam-grade-calculator"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
@@ -62,11 +63,14 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@cloudflare/kv-asset-handler": "^0.3.0",
+    "@cloudflare/workers-types": "^4.20240524.0",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "^3.34.2"
   }
 }
