--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 
 # dependencies
 /node_modules
+/.pnp
+.pnp.js
+.yarn/install-state.gz
 
 # next.js
 /.next/
@@ -9,6 +12,10 @@
 
 # production
 /build
+
+# misc
+.DS_Store
+*.pem
 
 # debug
 npm-debug.log*
@@ -18,6 +25,7 @@ yarn-error.log*
 
 # env files
 .env*
+.env*.local
 
 # vercel
 .vercel
@@ -25,3 +33,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Cloudflare
+.wrangler/
+dist/
+worker/
+.dev.vars
