Updates Node.js version to 20
Ensures compatibility with Cloudflare Pages by updating the Node.js version to 20.

This change aligns the project with the required Node.js version for building and deploying on Cloudflare Pages, resolving potential build errors or compatibility issues.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,19 +1,15 @@
 name = "final-exam-grade-calculator"
-type = "webpack"
-account_id = ""
-workers_dev = true
-route = ""
-zone_id = ""
 compatibility_date = "2023-06-01"
+
+# Configuration for Cloudflare Pages
+pages_build_output_dir = ".next"
+
+[build]
+command = "npm run build"
 
 [site]
 bucket = "./.next"
 entry-point = "./.cloudflare/workers-site"
 
-[build]
-command = "npm run build"
-upload.format = "service-worker"
-
 [env.production]
 name = "final-exam-grade-calculator-prod"
-route = "final-exam-grade-calculator.pages.dev/*"
