Configures project for static site export
Updates the project configuration to support static site generation for Cloudflare Pages.

This involves switching the Next.js output to 'export' and removing configurations related to the Cloudflare Workers runtime, as the project is now intended to be served as static assets.

This simplifies deployment and improves performance by leveraging Cloudflare's static caching capabilities.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "deploy": "wrangler pages publish .next --project-name=final-exam-grade-calculator"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
