--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "engines": {
     "node": ">=20.0.0"
   },
+  "packageManager": "pnpm@8.7.1",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -70,6 +71,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "critters": "^0.0.23",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5",
