--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "packageManager": "pnpm@8.7.1",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
