--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
-  "name": "my-v0-project",
-  "version": "0.1.0",
+  "name": "final-exam-grade-calculator",
+  "version": "2.0.0",
+  "description": "A powerful and intuitive web application that helps students calculate what they need on their final exams to achieve their target grades.",
+  "author": "Jacob Barkin <jacobsamuelbarkin@gmail.com>",
+  "homepage": "https://jacobbarkin.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JSB2010/final-exam-grade-calculator.git"
+  },
+  "keywords": ["grade-calculator", "education", "student-tools", "final-exam", "gpa", "nextjs"],
   "private": true,
   "engines": {
     "node": ">=20.0.0"
   },
   "packageManager": "pnpm@8.7.1",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
+    "dev:default": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -46,15 +55,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "8.5.1",
-    "framer-motion": "latest",
+    "framer-motion": "^12.12.1",
     "html2canvas": "latest",
     "input-otp": "1.4.1",
     "jspdf": "latest",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
-    "next-themes": "^0.4.4",
+    "next": "^15.3.2",
+    "next-themes": "^0.4.6",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
