Implement real Canvas LMS import

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,4 +2,4 @@ name = "final-exam-grade-calculator"
 compatibility_date = "2023-06-01"
 
 # Configuration for Cloudflare Pages
-pages_build_output_dir = "out"
+pages_build_output_dir = ".vercel/output"
