--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/is-prop-valid": "latest",
+    "@emotion/is-prop-valid": "1.3.1",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -58,9 +58,9 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.12.1",
-    "html2canvas": "latest",
+    "html2canvas": "1.4.1",
     "input-otp": "1.4.1",
-    "jspdf": "latest",
+    "jspdf": "3.0.1",
     "lucide-react": "^0.454.0",
     "next": "^15.3.2",
     "next-themes": "^0.4.6",
