Switch from pnpm to npm for package management
- Changed packageManager in package.json from pnpm to npm
- Removed pnpm-lock.yaml and added package-lock.json
- Updated .gitignore to track package-lock.json instead of pnpm-lock.yaml
- This fixes Cloudflare Pages deployment which was failing due to outdated pnpm-lock.yaml

--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,8 @@ next-env.d.ts
 # Cloudflare
 .cloudflare/
 
-# Lock files (keep only pnpm-lock.yaml since project uses pnpm)
-package-lock.json
+# Lock files (keep only package-lock.json since project uses npm)
+pnpm-lock.yaml
 yarn.lock
 
 # macOS
