--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "engines": {
     "node": ">=20.0.0"
   },
-  "packageManager": "pnpm@10.24.0",
+  "packageManager": "npm@11.3.0",
   "scripts": {
     "dev": "next dev --turbopack",
     "dev:default": "next dev",
