--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "final-exam-grade-calculator",
+  "name": "finals-calc",
   "version": "2.0.0",
-  "description": "A powerful and intuitive web application that helps students calculate what they need on their final exams to achieve their target grades.",
+  "description": "FinalsCalc helps students calculate what they need on their final exams to achieve their target grades.",
   "author": "Jacob Barkin <jacobsamuelbarkin@gmail.com>",
   "homepage": "https://jacobbarkin.com",
   "repository": {
@@ -9,7 +9,7 @@
     "url": "https://github.com/JSB2010/final-exam-grade-calculator.git"
   },
   "keywords": [
-    "grade-calculator",
+    "finals-calc",
     "education",
     "student-tools",
     "final-exam",
@@ -69,7 +69,7 @@
     "input-otp": "1.4.2",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.555.0",
-    "next": "^16.0.7",
+    "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "^19",
     "react-day-picker": "9.11.3",
