--- a/package.json
+++ b/package.json
@@ -67,9 +67,9 @@
     "framer-motion": "^12.23.25",
     "html2canvas": "latest",
     "input-otp": "1.4.2",
-    "jspdf": "^3.0.4",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.555.0",
-    "next": "16.0.10",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "react": "^19",
     "react-day-picker": "9.11.3",
